--- a/src/Phx.Test/Phx.Test.csproj
+++ b/src/Phx.Test/Phx.Test.csproj
@@ -7,12 +7,24 @@
 -->
 
 <Project Sdk="Microsoft.NET.Sdk">
-<Import Project="../../resources/build/PhxLib.common.props" Condition="Exists('../../resources/build/PhxLib.common.props')" />
-
+    <Import Project="../../resources/build/PhxLib.common.props" Condition="Exists('../../resources/build/PhxLib.common.props')" />
+    <Import Project="../../resources/build/NugetProperties.props" Condition="Exists('../../resources/build/NugetProperties.props')"/>
     <PropertyGroup>
-        <Version>$(PhxLibMajorVersion).0.0</Version>
+        <Version>$(PhxLibMajorVersion).0.1</Version>
         <Description>Test verification and execution utilities.</Description>
+        <PackageProjectUrl>https://github.com/StarCruiseStudios/PhxTest</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/StarCruiseStudios/PhxTest</RepositoryUrl>
     </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="NUnit" Version="$(VersionNUnit)" />
+        <PackageReference Include="Phx.Lib" Version="$(VersionPhxLib)" />
+        <PackageReference Include="Phx.Validation" Version="$(VersionPhxValidation)" />
+    </ItemGroup>
+    
+    <ItemGroup Condition=" '$(MSBuildProjectName)' != 'Phx.Lib' ">
+        <PackageReference Include="NLog" Version="$(VersionNLog)" />
+    </ItemGroup>
 
     <Target Name="EnsureBuildFileImports" BeforeTargets="PrepareForBuild">
         <PropertyGroup>
