--- a/src/Phx.Test/Phx.Test.csproj
+++ b/src/Phx.Test/Phx.Test.csproj
@@ -7,7 +7,7 @@
 -->
 
 <Project Sdk="Microsoft.NET.Sdk">
-    <Import Project="../../resources/build/PhxLib.common.props" Condition="Exists('../../resources/build/PhxLib.common.props')" />
+    <Import Project="../../resources/build/PhxLib.common.props" Condition="Exists('../../resources/build/PhxLib.common.props')"/>
     <Import Project="../../resources/build/NugetProperties.props" Condition="Exists('../../resources/build/NugetProperties.props')"/>
     <PropertyGroup>
         <Version>$(PhxLibMajorVersion).0.1</Version>
@@ -17,20 +17,21 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="NUnit" Version="$(VersionNUnit)" />
-        <PackageReference Include="Phx.Lib" Version="$(VersionPhxLib)" />
-        <PackageReference Include="Phx.Validation" Version="$(VersionPhxValidation)" />
+        <PackageReference Include="NUnit" Version="$(VersionNUnit)"/>
+        <PackageReference Include="Phx.Lib" Version="$(VersionPhxLib)"/>
+        <PackageReference Include="Phx.Validation" Version="$(VersionPhxValidation)"/>
     </ItemGroup>
-    
+
     <ItemGroup Condition=" '$(MSBuildProjectName)' != 'Phx.Lib' ">
-        <PackageReference Include="NLog" Version="$(VersionNLog)" />
+        <PackageReference Include="NLog" Version="$(VersionNLog)"/>
     </ItemGroup>
 
     <Target Name="EnsureBuildFileImports" BeforeTargets="PrepareForBuild">
         <PropertyGroup>
             <ErrorText>This package relies on imported build files that are not found. Missing: {0}</ErrorText>
         </PropertyGroup>
-        <Error Condition="!Exists('../../resources/build/PhxLib.common.props')" Text="$([System.String]::Format('$(ErrorText)', '../../resources/build/PhxLib.common.props'))" />
+        <Error Condition="!Exists('../../resources/build/PhxLib.common.props')" Text="$([System.String]::Format('$(ErrorText)', '../../resources/build/PhxLib.common.props'))"/>
+        <Error Condition="!Exists('../../resources/build/NugetProperties.props')" Text="$([System.String]::Format('$(ErrorText)', '../../resources/build/NugetProperties.props'))"/>
     </Target>
 
 </Project>
